--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -260,16 +260,18 @@ exampleSmall <- rbind(exampleSmall, exampleSmall_2, exampleSmall_3)
 
 ggplot(data = exampleSmall) +
   geom_sf(aes(color = FocalInd, fill = FocalInd)) +
-  geom_segment(aes(x = 0, xend = 1, y = 0, yend = 0), size = .5, 
+  geom_segment(aes(x = 0, xend = .6, y = 0, yend = 0), size = .5, 
                lineend = "round", color = "grey30") + 
-  geom_segment(aes(x = 0, xend = 1, y = 1, yend = 1), size = .5, 
+  geom_segment(aes(x = 0, xend = .6, y = .6, yend = .6), size = .5, 
                lineend = "round", color = "grey30") + 
-  geom_segment(aes(x = 0, xend = 0, y = 0, yend = 1), size = .5, 
+  geom_segment(aes(x = 0, xend = 0, y = 0, yend = .6), size = .5, 
                lineend = "round", color = "grey30") + 
-  geom_segment(aes(x = 1, xend = 1, y = 0, yend = 1), size = .5, 
+  geom_segment(aes(x = .6, xend = .6, y = 0, yend = .6), size = .5, 
                lineend = "round", color = "grey30") + 
   xlab("quadrat horizontal edge (m)") +
   ylab("quadrat vertical edge (m)") +
+  xlim(c(0,.6)) +
+  ylim(c(0,.6)) +
   #labs(title = Year) +
   facet_wrap( ~ Year) +
   theme_classic() +
